refactor: improve error logging and update console output handling, format.